make form functional

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="surveyquest">
-          <label  for="time">4. What would you rather do while on vacation?</label>
+          <label  for="time">4. What would you prefer to do the most while on vacation?</label>
           <select id="time" class="" name="time">
             <option value="eat">Eat lots of food.</option>
             <option value="sleep">Sleep in and relax.</option>
@@ -87,7 +87,7 @@
         <h2>You should go to:</h2>
         <h3>Tiger Run RV Resort, CO</h3>
         <img class="img-responsive" src="img/tigerRunResort.jpg" alt="Tiger Run Resort Skiing" />
-        <p>Located in Breckenridge, CO, this impressive RV resort boasts of nearly 200 RV accomodations and provides the best access to the slopes. If your the type who likes to gear up and hit the slopes, this is the place for you. RV camping is the ideal way to get in plenty of fun and activity while the snow lasts. Tiger Run is famous for their reasonable rates, quality facilities, and impressive local brewery. Get out and enjoy the weather while it still lasts!</p>
+        <p>Located in Breckenridge, CO, this impressive RV resort boasts of nearly 200 RV accomodations and provides the best access to the slopes. If you're the type who likes to gear up and hit the slopes, this is the place for you. RV camping is the ideal way to get in plenty of fun and activity while the snow lasts. Tiger Run is famous for their reasonable rates, quality facilities, and impressive local brewery. Get out and have a blast!</p>
       </div>
 
       <div id="resultHate">
