--- a/questions.html
+++ b/questions.html
@@ -11,3 +11,13 @@ label
 <input type="radio" name="time" value="hike"> Hike and explore. <br>
 <input type="radio" name="time" value="sights"> See the local sights. <br>
 <input type="radio" name="time" value="sports"> Sports and activities!
+
+
+
+
+<!--
+
+Questions:
+- Bootstrap form styles won't work
+- Radio button input in jQuery won't work (skipped remaining functions and variables)
+ 
