Add README.md and adjust scripts.js

--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@
         </div>
       </div>
 
-      <div>
-        <div>
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
           <div id="resultExplore">
           <h2>You should visit...</h2>
           <h3>Cape Disappointment State Park, WA</h3>
-          <p>"Located by the Columbia River bar on the southern border of Washington, Cape Disappointment is anything but disappointing. The campground itself has ample room for RVs, especially during these winter months, and the facilities are convenient and clean. The forested area is beautiful, scattered with rock pillars—some reaching several stories tall—that lead from the campgrounds to the beach. The wind-swept shore is breathtaking at any time of the year, with silver sands, crashing waves, and towering black rock cliffs to the north. - See more <a href="http://www.kirklandrvsales.com/3-best-winter-rv-vacation-destinations/#sthash.0AThfc43.dpuf">here.</a>"</p>
+          <p>"Located by the Columbia River bar on the southern border of Washington, Cape Disappointment is anything but disappointing. The campground itself has ample room for RVs, especially during these winter months, and the facilities are convenient and clean. The forested area is beautiful, scattered with rock pillars—some reaching several stories tall—that lead from the campgrounds to the beach. The wind-swept shore is breathtaking at any time of the year, with silver sands, crashing waves, and towering black rock cliffs to the north. - See more <a href="http://www.kirklandrvsales.com/3-best-winter-rv-vacation-destinations/#sthash.0AThfc43.dpuf" target="_blank" >here.</a>"</p>
           <img class="img-responsive" src="img/capeDisappointment.jpg" alt="Cape Disappointment" />
           </div>
         </div>
       </div>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <div id="RVsupplies">
           <h4>Before you hit the road...</h4>
@@ -129,7 +129,7 @@
           <p>Before you leave on your vacation, be sure to research and collect all the items you will need. You can even talk to your local RV dealer and inquire about their recommendations for safe winter travel.</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
 
